--- a/src/main/resources/templates/traffic/motorbike-taxi-drivers.html
+++ b/src/main/resources/templates/traffic/motorbike-taxi-drivers.html
@@ -3,7 +3,7 @@
   <div class="row title">
     <div class="col-md-12">
       <h3>
-        Quản lý tuyển người làm
+        Quản lý xe ôm
       </h3>
     </div>
   </div>
