--- a/src/main/resources/templates/work/recruitment.html
+++ b/src/main/resources/templates/work/recruitment.html
@@ -50,6 +50,13 @@
             <a th:href="@{/work/recruitment/detail(recruitmentId=*{work.workRequestRecruitmentId})}">
               <i class="fas fa-eye text-warning"></i>
             </a>
+            <th:block th:if="*{work.sttWorkCode == 1}">
+              <a href="javascript:void(0)" class="text-success">
+                <i class="fas fa-check" onclick="confirmApproveRecruitment(event)">
+                  <span class="d-none" th:text="*{work.workRequestRecruitmentId}"></span>
+                </i>
+              </a>
+            </th:block>
             <a href="javascript:void(0)" class="color-danger">
               <i class="far fa-trash-alt" onclick="confirmDeleteRecruitment(event)">
                 <span class="d-none" th:text="*{work.workRequestRecruitmentId}"></span>
