--- a/src/main/resources/templates/fptu/club.html
+++ b/src/main/resources/templates/fptu/club.html
@@ -30,7 +30,7 @@
           <td><span th:text="*{club.fptuClubContactPhoneNumber}"></span></td>
           <td class="text-right">
             <a th:href="@{/club/detail(clubId=*{club.fptuClubId})}">
-              <i class="fas fa-eye text-warning"></i>
+              <i class="fas fa-eye text-warning mr-2"></i>
             </a>
             <a href="javascript:void(0)" class="color-danger">
               <i class="far fa-trash-alt" onclick="confirmDeleteClub(event)">
