--- a/src/main/resources/templates/traffic/modal/modal-show-bus-stop.html
+++ b/src/main/resources/templates/traffic/modal/modal-show-bus-stop.html
@@ -5,6 +5,9 @@
     <div class="modal-content">
       <!-- Modal Header -->
       <div class="modal-header">
+        <h5 class="modal-title" id="showBusStopModalLabel">
+          <span>Điểm dừng của xe</span>
+        </h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
