--- a/src/main/resources/templates/traffic/motorbike-taxi-drivers.html
+++ b/src/main/resources/templates/traffic/motorbike-taxi-drivers.html
@@ -42,6 +42,9 @@
             </span>
           </td>
           <td class="text-right">
+            <a href="javascript:void(0)" class="color-success">
+              <i class="fas fa-pencil-alt fa-fw"></i>
+            </a>
             <a href="javascript:void(0)" class="color-danger">
               <i class="far fa-trash-alt" onclick="confirmDeleteMotorbikeTaxi(event)">
                 <span class="d-none" th:text="*{motorbike.tfMotorbikeTaxiDriversId}"></span>
