--- a/src/main/resources/templates/traffic/bus.html
+++ b/src/main/resources/templates/traffic/bus.html
@@ -46,6 +46,9 @@
             </span>
           </td>
           <td class="text-right">
+            <a href="javascript:void(0)" class="color-success">
+              <i class="fas fa-pencil-alt fa-fw"></i>
+            </a>
             <a href="javascript:void(0)" class="color-danger">
               <i class="far fa-trash-alt" onclick="confirmDeleteBus(event)">
                 <span class="d-none" th:text="*{bus.tfBusId}"></span>
