--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -85,6 +85,7 @@
     <div th:replace="food/modal/modal-confirm-delete-online-store :: confirmDeleteOnlineStoreModal"></div>
   </th:block>
   <th:block th:if="${page == 7}">
+    <div th:replace="traffic/modal/modal-show-info-bus :: showBusInfoModal"></div>
     <div th:replace="traffic/modal/modal-show-bus-stop :: showBusStopModal"></div>
   </th:block>
 
