--- a/src/main/resources/templates/traffic/motorbike-taxi-drivers.html
+++ b/src/main/resources/templates/traffic/motorbike-taxi-drivers.html
@@ -17,7 +17,7 @@
           <th>Tên<i class="fas fa-sort fa-size"></i></th>
           <th class="text-center">Giới tính<i class="fas fa-sort fa-size"></i></th>
           <th class="text-center">Số điện thoại<i class="fas fa-sort fa-size"></i></th>
-          <th class="text-center">Bằng lái<i class="fas fa-sort fa-size"></i></th>
+          <th class="text-center">Biển số<i class="fas fa-sort fa-size"></i></th>
           <th class="text-center">Phương tiện<i class="fas fa-sort fa-size"></i></th>
           <th class="text-center">Thời gian làm việc<i class="fas fa-sort fa-size"></i></th>
           <th>Trạng thái<i class="fas fa-sort fa-size"></i></th>
@@ -42,7 +42,7 @@
             </span>
           </td>
           <td class="text-right">
-            <a href="javascript:void(0)" class="color-success">
+            <a href="javascript:void(0)" class="color-success mr-2">
               <i class="fas fa-pencil-alt fa-fw"></i>
             </a>
             <a href="javascript:void(0)" class="color-danger">
