update html club

--- a/src/main/resources/static/css/hola-land/common.css
+++ b/src/main/resources/static/css/hola-land/common.css
@@ -458,6 +458,10 @@ body.fixed-nav.sidebar-toggled #content-wrapper {
   font-size: initial;
 }
 
+.span {
+  white-space: pre-wrap;
+}
+
 .modal-description {
   max-width: 1000px;
 }
