--- a/src/main/resources/templates/food/modal/modal-confirm-lock-online-store.html
+++ b/src/main/resources/templates/food/modal/modal-confirm-lock-online-store.html
@@ -1,16 +1,16 @@
-<!-- Modal confirm delete online store -->
-<div class="modal fade" id="confirmDeleteOnlineStoreModal" tabindex="-1" aria-labelledby="confirmDeleteOnlineStoreModalLabel"
-     aria-hidden="true" th:fragment="confirmDeleteOnlineStoreModal">
+<!-- Modal confirm lock online store -->
+<div class="modal fade" id="confirmLockOnlineStoreModal" tabindex="-1" aria-labelledby="confirmLockOnlineStoreModalLabel"
+     aria-hidden="true" th:fragment="confirmLockOnlineStoreModal">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="confirmDeleteOnlineStoreModalLabel">Thông báo</h5>
+        <h5 class="modal-title" id="confirmLockOnlineStoreModalLabel">Thông báo</h5>
       </div>
       <div class="modal-body">
-        Xác nhận xoá cửa hàng này?
+        Xác nhận khóa cửa hàng này?
       </div>
       <div class="modal-footer">
-        <a id="btn-delete-online-store" href="javascript:void(0)" class="btn btn-sm btn-secondary me-2">
+        <a id="btn-lock-online-store" href="javascript:void(0)" class="btn btn-sm btn-secondary me-2">
           <i class="fas fa-check text-success"></i>Xác nhận
         </a>
 <!--        <a href="javascript:void(0)" class="btn btn-sm btn-secondary" data-bs-dismiss="modal">Đóng</a>-->
