--- a/src/main/resources/templates/work/find-job.html
+++ b/src/main/resources/templates/work/find-job.html
@@ -30,7 +30,11 @@
               <span th:text="*{user.userDetailName}"></span>
             </th:block>
           </td>
-          <td><span th:text="${format.title(worker.workRequestFindJobTitle, 25)}"></span></td>
+          <td>
+            <a th:href="@{/work/find-job/detail(findJobId=*{worker.workRequestFindJobId})}">
+              <span th:text="${format.title(worker.workRequestFindJobTitle, 25)}"></span>
+            </a>
+          </td>
           <td><span th:text="*{#dates.format(worker.workRequestFindJobStartDateTime, 'dd-MM-yyyy')}"></span></td>
           <td><span th:text="*{#dates.format(worker.workRequestFindJobEndDateTime, 'dd-MM-yyyy')}"></span></td>
           <td>
@@ -45,9 +49,6 @@
             </span>
           </td>
           <td class="text-right">
-            <a th:href="@{/work/find-job/detail(findJobId=*{worker.workRequestFindJobId})}">
-              <i class="fas fa-eye text-info mr-2"></i>
-            </a>
             <th:block th:if="*{worker.sttWorkCode == 1}">
               <a href="javascript:void(0)" class="text-success mr-2">
                 <i class="fas fa-check" onclick="confirmApproveFindJob(event)">
