--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -162,7 +162,7 @@
   <script th:src="@{/js/datatables/jquery.min.js}"></script>
   <script th:src="@{/js/datatables/jquery.dataTables.min.js}"></script>
   <script th:src="@{/js/datatables/datatables.vietnamese.js}"></script>
-  <script th:src="@{/js/template/index.js}"></script>
+  <script th:src="@{/js/templates/index.js}"></script>
   <script th:src="@{/js/templates/all.js}"></script>
 
   <script th:if="${busStop != null && busStop.size() != 0}">
