--- a/src/main/resources/templates/traffic/bus.html
+++ b/src/main/resources/templates/traffic/bus.html
@@ -20,7 +20,7 @@
           <th class="text-center">Giá<i class="fas fa-sort fa-size"></i></th>
           <th class="text-center">Điểm dừng<i class="fas fa-sort fa-size"></i></th>
           <th>Trạng thái<i class="fas fa-sort fa-size"></i></th>
-          <th>Thêm<i class="fas fa-sort fa-size"></i></th>
+          <th class="text-right">Thêm</th>
         </tr>
         </thead>
         <tbody>
