--- a/src/main/resources/templates/traffic/motorbike-taxi-drivers.html
+++ b/src/main/resources/templates/traffic/motorbike-taxi-drivers.html
@@ -21,7 +21,7 @@
           <th class="text-center">Phương tiện<i class="fas fa-sort fa-size"></i></th>
           <th class="text-center">Thời gian làm việc<i class="fas fa-sort fa-size"></i></th>
           <th>Trạng thái<i class="fas fa-sort fa-size"></i></th>
-          <th>Thêm<i class="fas fa-sort fa-size"></i></th>
+          <th class="text-right">Thêm</th>
         </tr>
         </thead>
         <tbody>
