--- a/src/main/resources/templates/work/recruitment.html
+++ b/src/main/resources/templates/work/recruitment.html
@@ -15,11 +15,11 @@
         <tr>
           <th class="text-center">#</th>
           <th>Người đăng<i class="fas fa-sort fa-size"></i></th>
-          <th>Tiêu đề<i class="fas fa-sort fa-size"></i></th>
+          <th class="text-center">Tiêu đề<i class="fas fa-sort fa-size"></i></th>
           <th>Ngày tạo<i class="fas fa-sort fa-size"></i></th>
           <th>Ngày hết hạn<i class="fas fa-sort fa-size"></i></th>
           <th>Trạng thái<i class="fas fa-sort fa-size"></i></th>
-          <th>Thêm<i class="fas fa-sort fa-size"></i></th>
+          <th class="text-right">Thêm<i class="fas fa-sort fa-size"></i></th>
         </tr>
         </thead>
         <tbody>
