--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -93,9 +93,13 @@
     <div th:replace="food/modal/modal-show-comment :: showCommentModal"></div>
     <!-- Import modal show report -->
     <div th:replace="food/modal/modal-show-report :: showReportModal"></div>
+  </th:block>
+
+  <th:block th:if="${page==6 && userDetail != null}">
     <!-- Import modal show detail seller -->
     <div th:replace="food/modal/modal-show-detail-seller :: showDetailSellerModal"></div>
   </th:block>
+
   <th:block th:if="${page == 7}">
     <div th:replace="traffic/modal/modal-show-info-bus :: showBusInfoModal"></div>
     <div th:replace="traffic/modal/modal-show-bus-stop :: showBusStopModal"></div>
