--- a/src/main/resources/templates/traffic/bus.html
+++ b/src/main/resources/templates/traffic/bus.html
@@ -46,7 +46,7 @@
             </span>
           </td>
           <td class="text-right">
-            <a href="javascript:void(0)" class="color-success mr-2">
+            <a th:href="@{/bus/update(busId=*{bus.tfBusId})}" class="color-success mr-2">
               <i class="fas fa-pencil-alt fa-fw"></i>
             </a>
             <a href="javascript:void(0)" class="color-danger">
